# terminus

./: .gitignore  LICENSE  README.md  benchmark_interpreter.py  benchmark_interpreter_profile.py  build.zig  build_pydust.zig  jest.config.js  package-lock.json  package.json  pyproject.toml  readme.md  tsconfig.json
.github/workflows/: ci.yml  publish.yml
scripts/: generate_stubs.py
service/: term_interpreter.py  term_parser.py
src/: benchmark.zig  builtin_env.zig  interpreter.zig  interpreter_builtin.zig  interpreter_environment.zig  main.zig  term.zig  term_interpreter.zig  term_lib.zig  term_parser.zig  test_builtins.zig  test_interpreter.zig  test_parser.zig  wasm.zig
src/ts/: demo.ts  index.ts
src/ts/__tests__/: termynus.test.ts
test/: test_fib.py  test_term_interpreter_lib.py  test_term_parser_lib.py
test/service/: test_term_interpreter.py  test_term_parser.py
